# html-five

./: .gitignore  README.md  setup.cfg
docs/: Makefile  index.html  objects.inv  searchindex.js
docs/_static/: alabaster.css  custom.css
docs_src/: Makefile  conf.py  index.rst
html/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
src/htmlfive/: __init__.py  html5_builder.py  html5_common.py  html5_exporter.py  html5_formatter.py  html5_parser.py
test/: test_builder.py  test_exporter.py  test_formatter.py  test_html_formatter.py  test_parse_export.py  test_parser.py
