[metadata]
name = htmlfive
version = attr: htmlfive.VERSION
author = Niall McCarroll
author_email = niall.mccarroll@gmail.com
description = utilities for working with HTML5
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/niallmcc/html-five
project_urls =
    Bug Tracker = https://github.com/niallmcc/html-five/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
